--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  dio: ^5.7.0
+  retrofit: ^4.4.1
+  retrofit_generator: ^9.1.2
+  freezed: ^2.5.7
+  freezed_annotation: ^2.4.4
+  gap: ^3.0.1
+  pretty_dio_logger: ^1.4.0
+  dartz: ^0.10.1
+  injectable: ^2.5.0
+  get_it: ^8.0.0
+  injectable_generator: ^2.6.2
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +57,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  json_serializable: ^6.8.0
+  build_runner: ^2.4.13
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
