--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   dio: ^5.7.0
   retrofit: ^4.4.1
-  retrofit_generator: ^9.1.2
+
   freezed: ^2.5.7
   freezed_annotation: ^2.4.4
   gap: ^3.0.1
@@ -46,19 +46,19 @@ dependencies:
   injectable: ^2.5.0
   get_it: ^8.0.0
   injectable_generator: ^2.6.2
+  shared_preferences: ^2.3.2
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.6
+  json_annotation: ^4.9.0
+  logger: ^2.4.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^4.0.0
   json_serializable: ^6.8.0
   build_runner: ^2.4.13
+  retrofit_generator: ^9.1.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
