--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   json_annotation: ^4.9.0
   logger: ^2.4.0
+  flutter_slidable: ^3.1.1
 
 dev_dependencies:
   flutter_test:
