--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,12 @@ dependencies:
   json_annotation: ^4.9.0
   logger: ^2.4.0
   flutter_slidable: ^3.1.1
+  toastification: ^2.3.0
+  network_info_plus: ^6.0.2
+  internet_connection_checker: ^1.0.0+1
+  shimmer: ^3.0.0
+  mocktail: ^1.0.4
+  bloc_test: ^9.1.7
 
 dev_dependencies:
   flutter_test:
@@ -73,9 +79,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - assets/images/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
